<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView 
        android:id="@+id/underlistView_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:textColor="#999999"
        android:paddingTop="3dp"
        android:paddingLeft="4dp"
        android:paddingBottom="2dp"
        android:text="@string/bill"
        />
    
    <ImageView 
        android:id="@+id/underlistView_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="1dp"
        android:background="#cbda9c"
        />
    
    <LinearLayout
        android:id="@+id/billLayout"
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:paddingTop="3dp"
	    android:paddingLeft="4dp"
	    android:paddingBottom="2dp"
	    android:orientation="vertical" >
    
	    <TextView 
	        android:id="@+id/underlistView_elements"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:textColor="#000000"
	        android:text="@string/noElements"
	        android:layout_gravity="center"
	        />
	    
	    <TextView 
	        android:id="@+id/underlistView_proceed"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="13sp"
	        android:textColor="#000000"
	        android:text="@string/pay"
	        android:layout_gravity="center"
	        />
    
    </LinearLayout>

</LinearLayout>